feat: initial markup

--- a/index.html
+++ b/index.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles.css">
     <title>Test</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <header>
+        <h2><a href="">NEXT INVEST</a></h2>
+        <nav>
+            <ul>
+                <li>
+                    <button>
+                        <p>Investment Opportunities</p>
+                        <img src="" alt="">
+                    </button>
+                </li>
+                <li>
+                    <button>
+                        <p>How it works</p>
+                        <img src="" alt=""></li>
+                    </button>
+                </li>
+                <li>
+                    <button>
+                        <p>Text2</p>
+                    </button>
+                </li>
+                <li>
+                    <button>
+                        <p>Text2</p>
+                    </button>
+                </li>
+                <li>
+                    <button>
+                        <p>Text3</p>
+                    </button>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section class="common">
+
+    </section>
+
 </body>
 </html>
